--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "generate": "node ./server/generate.js > ./server/database.json",
+    "generate": "node ./server/generate.mjs > ./server/database.json",
     "server": "json-server --watch ./server/database.json"
   },
-  "type": "module",
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
