--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@tinymce/tinymce-angular": "^6.0.1",
     "json-server": "^0.17.0",
     "query-string": "^7.1.1",
     "rxjs": "~7.5.0",
